<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="hello_world">Hello World</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_temperature_label">Temperature</string>
    <string name="pref_temperature_key">temperature</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">110052</string>
    <string name="pref_temp_default">metric</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>


</resources>
