<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:inputType="text"
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_label"
        android:entries="@array/temp_display_name"
        android:entryValues="@array/temp_display_values"
        android:defaultValue="@string/pref_temp_default"
        />

</PreferenceScreen>